aws-templates/cloudformation/ChaosVpc.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC to do stuff with

Resources:

  # Networking
  
  ## VPC for the environment
  ChaosVpc:
    Type: AWS::EC2::VPC
    Description: VPC to do stuff with
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: ChaosVPC

  ## Public Route
  ChaosPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      VpcId: !Ref ChaosVpc

  ## Private Route

  ## Route table for the subnet
  ChaosRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref ChaosVpc

  # Internet Connectivity
  
  ## Internet gateway for internet access
  ChaosInternetGateway:
    Type: AWS::EC2::InternetGateway

  ## Attach IGW to the VPC
  ChaosGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref ChaosVpc
      InternetGatewayId: !Ref ChaosInternetGateway

  ## Default route to the internet
  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn:
      - ChaosGatewayAttachment
    Properties:
      RouteTableId: !Ref ChaosRouteTable
      GatewayId: !Ref ChaosInternetGateway
      DestinationCidrBlock: 0.0.0.0/0

  ## Associate subnet with the route table
  ChaosSubnetRouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref ChaosRouteTable
      SubnetId: !Ref ChaosPublicSubnet

  # Security Groups
  
  ## ICMP
  ChaosICMP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ICMP access
      VpcId: !Ref ChaosVpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: icmp
          FromPort: -1
          ToPort: -1
  
  ## SSH
  ChaosSSH:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH access
      VpcId: !Ref ChaosVpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22

  ## HTTP
  ChaosHTTP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP access
      VpcId: !Ref ChaosVpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80

  ## HTTPS
  ChaosHTTPS:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTPS access
      VpcId: !Ref ChaosVpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443

  ## RDP
  ChaosRDP:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDP access
      VpcId: !Ref ChaosVpc
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 3389
          ToPort: 3389

  # Compute
  
  ## EC2 instance in the public subnet
  ChaosInstance:
    Type: AWS::EC2::Instance
    DependsOn:
      - InternetRoute
      - ChaosSubnetRouteTableAssoc
    Properties:
      InstanceType: t2.micro
      SubnetId: !Ref ChaosPublicSubnet
      ImageId: ami-01b14b7ad41e17ba4
      SecurityGroupIds:
        - !Ref ChaosICMP
        - !Ref ChaosSSH
